--- a/CSS/style.css
+++ b/CSS/style.css
@@ -104,7 +104,9 @@ body {
 
 /* left image section */
 .hero {
-    padding: 20px 80px;
+    padding-right: 80px;
+    padding-left: 80px;
+    padding-top: 30px;
     overflow: hidden;
     margin-bottom: 8vw;
 }
@@ -117,13 +119,14 @@ body {
     align-items: center;
     justify-content: center;
     filter: drop-shadow(0vw 0vw 3vw #66A6EF);
+    object-fit: contain;
 }
 
 .hero-bottom-bar {
     border-bottom: 5px solid #31B444;
     box-shadow: 0px 0px 20px #31B444, 0px 0px 20px #31B444,
         0px 0px 20px #31B444, 0px 0px 20px #31B444;
-    width: 20vw;
+    width: 18.7vw;
     border-radius: 2px;
 }
 
@@ -154,12 +157,12 @@ body {
 
 .introdution h2 {
     font-weight: 700;
-    font-size: 2.2vw;
+    font-size: 2vw;
 }
 
 .introdution h4 span {
     color: #4da3ff;
-    font-size: 1.4vw;
+    font-size: 1.3vw;
     font-weight: 600;
 }
 
@@ -330,10 +333,11 @@ body {
 }
 
 .page2-right img {
-    width: 20vw;
-    height: 20vw;
+    width: 55%;
+    height: 80%;
     border-radius: 50%;
     outline: 10px solid #31b444;
+    object-fit: cover;   
 }
 
 
@@ -752,7 +756,7 @@ textarea {
     }
 
     .hero-bottom-bar {
-        width: 60vw;
+        width: 56vw;
     }
 
     /* right part section */
