last changes commit

--- a/public/style.css
+++ b/public/style.css
@@ -87,7 +87,7 @@ body {
     width: 100%;
     display: flex;
     position: relative;
-    background-image: url(./../imgs/Background\ image.png);
+    background-image: url(./imgs/Background\ image.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
